syntax = "proto3";

option csharp_namespace= "GRPCExampleShared.Core.ProtoFiles";

service Greeter{
	rpc SayHello(HelloRequest) returns(HelloReply);
	rpc StreamingFromServer(ExampleRequest) returns(stream ExampleResponse);
	rpc StreamingForClient(stream ExampleRequest) returns (ExampleResponse);
	rpc StreamingBothWays(stream ExampleRequest) returns(stream ExampleResponse);
}

message HelloRequest{
	string name = 1;
}

message HelloReply{
	string message=  1;
}

message ExampleRequest{
	int32 pageIndex = 1;
	int32 pageSize = 2;
	bool isDescending = 3;
}

message ExampleResponse{
	string message = 1;
}